# AI-Orchestrator

./: .desktop-pins.json  .env.example  .gitignore  .mcp.json  .tmux.conf.ai-brain  AI-RUN-COMPANY.md  AUTONOMOUS-V2-README.md  AUTONOMOUS_PROMPT.txt  CALIBRATION-REPORT.md  CATALOG.md  CLAUDE.md.backup  DECISIONS.md  GOVERNANCE-EVIDENCE.md  IMPLEMENTATION-SUMMARY.md  NEXT-SESSION-BUG-DISCOVERY.md  NEXT-SESSION-PROMPT.md  NEXT_STEPS_ASSESSMENT.md  PHASE-0-READINESS.md  QUICKSTART.md  RALPH-COMPARISON.md  README.md  ROADMAP.md  RUN-TDD-AUTONOMOUS-LOOP.md  STATE.md  SYSTEM-CONFIGURATION.md  TEST-PROMPT-FOR-CHAT.md  USER-PREFERENCES.md  VERIFICATION-FIXES-COMPLETE.md  autonomous_loop.py  bugs_to_fix.json  classify_all_emails.sh  claude.md  continuity for human.md  filter_adr001_tasks.py  gemini.md  karematch-feature-status.md  package.json  parallel_autonomous_loop.py  pyproject.toml  quick_test.py  (+14 more)
.aibrain/: CROSS-REPO-DUPLICATION-COMPLETE.md  IMPLEMENTATION-PROGRESS.md  PHASE-1-COMPLETE-NEXT-STEPS.md  PHASE-1-COMPLETE.md  PHASE-1-COMPLETION-SUMMARY.md  PHASE-1-IMPLEMENTATION-COMPLETE.md  PHASE-1-INTEGRATION-PLAN.md  PHASE-2B-KANBAN-INTEGRATION-COMPLETE.md  PHASE-2B-LAUNCH-GUIDE.md  PHASE-2B-READY-FOR-EXECUTION.md  PHASE-2B-READY-TO-LAUNCH.md  SESSION-20260207-stateless-memory-phase1-reflection-v2.md  SESSION-20260207-stateless-memory-phase1.md  STEP-1.4-COMPLETE-SESSION-STATE-MULTI-AGENT.md  agent-loop.local.md  global-state-cache.md  v9-STATELESS-MEMORY-OVERVIEW.md
.claude/: README.md  settings.json
.claude-plugin/: plugin.json
.ralph/: PRD.md  progress.md
AI-Team-Plans/: ADR-INDEX.md  PROJECT_HQ.md  V6.0-META-AGENT-COMPLETION-SUMMARY.md
adapters/: __init__.py  base.py
agents/: __init__.py  base.py  bugfix.py  codequality.py  factory.py  featurebuilder.py  llm_interface.py  self_correct.py  testwriter.py
archive/: README.md
catalog/: adr-registry.md  knowledge-registry.md  plan-registry.md  repo-registry.md  session-registry.md
claude/: __init__.py  auth_config.py  cli_wrapper.py  prompts.py  sdk_adapter.py
cli/: __init__.py  __main__.py
discovery/: __init__.py  baseline.py  scanner.py  task_generator.py
docs/: AGENTS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  AUTOFORGE-QUICKSTART.md  COST_COMPARISON_QUICK_REFERENCE.md  CROSS-REPO-SKILLS.md  DUAL-REPO-STATELESS-MEMORY-STRATEGY.md  GOVERNANCE.md  INDEX.md  OPERATOR_TEAM_USAGE.md  PHASE-1-THROUGH-5-ROADMAP.md  QUICKSTART.md  RIS-stateless-memory-v9.md  VAULT-REFERENCE.md  VERIFIED-BUGS.md  WIGGUM-ENHANCEMENTS-COMPLETE.md  WIGGUM-RENAME-SUMMARY.md  agent-replication-strategy.md  ai-tech-shop-architecture.md  karematch-test-baseline.md  multi-agent-operator-guide.md  phase-1-session-state-implementation.md  stateless-memory-quick-reference.md  v9-IMPLEMENTATION-INDEX.md  v9-architecture-diagram.md
escalations/: TASK-001-20260118-190000.md
evidence/: EVIDENCE-001-ca-np-cme-tracking.md  EVIDENCE-002-cme-gap-calculation-contradictions.md  index.md
examples/: discord_webhook_example.py  n8n_workflow.json  session_state_integration_example.py  slack_webhook_example.py
governance/: DOCUMENTATION-GOVERNANCE.md  __init__.py  contract.py  enforce.py  oversight_config.yaml  require_harness.py  simple_enforce.py  token_budget.py  token_estimator.py  verification_audit.py
harness/: __init__.py  governed_session.py
hooks/: pre-commit-branch-check
knowledge/: __init__.py  embeddings.py  metrics.json  metrics.py  semantic_search.py  service.py  vector_store.py
mcp/: __init__.py  provider.py  tool_filter.py
mcp_integration/: __init__.py  provider.py  server_config.py  tool_filter.py
mission-control/: DASHBOARD.md  README.md
monitoring/: __init__.py  metrics.py
optimization/: __init__.py  context_compressor.py  summarizer.py  toon_format.py
orchestration/: INTEGRATION_GUIDE.md  __init__.py  adr_generator.py  adr_registry.py  adr_to_tasks.py  advisor_integration.py  advisor_to_adr.py  checkpoint.py  circuit_breaker.py  cito_resolver.py  cli_process_manager.py  content_approval.py  content_pipeline.py  context_preparation.py  council_adr_generator.py  council_dashboard.py  council_effectiveness.py  council_ko_integration.py  create_adr_from_debate.py  debate_context.py  debate_manifest.py  decision_audit.py  deployment_orchestrator.py  escalation.py  event_logger.py  generate_duplicate_handling_tasks.py  handoff_template.md  iteration_loop.py  ko_helpers.py  message_bus.py  metrics_collector.py  models.py  monitor.py  monitoring_integration.py  parallel_controller.py  parallel_executor.py  performance_tracker.py  queue_manager.py  queue_sync_manager.py  reflection.py  (+19 more)
parking/: __init__.py  icebox.py  review.py  service.py
plans/: CME-SYSTEMIC-FIX-PLAN.md  karematch-production-completion-plan.md
prompts/: continue-ai-tech-shop-build.md
ralph/: __init__.py  baseline.py  cli.py  engine.py  fast_verify.py  risk.py  verdict.py  verify_handoff.py  watcher.py
reports/: oversight-weekly-2026-01-11.md
scripts/: LICENSE_EXTRACTION_FIXES.md  LICENSE_EXTRACTION_PROJECT.md  README.md  debate_2026_vs_v2.py  debate_2026_vs_v2_enhanced.py  deploy_ai_team.py  generate_editorial_articles.py  migrate_json_to_sqlite.py  run_validation.py  test_debate_setup.py  test_team_lead_orchestration.py
sessions/: 2026-01-05-git-setup.md  2026-01-05-init.md  2026-01-05-scaffold.md  2026-01-06-appointment-routes-debugging.md  2026-01-06-appointment-routes-fk-fix.md  2026-01-06-autonomous-complete.md  2026-01-06-autonomous-implementation-complete.md  2026-01-06-autonomous-loop-verification-fix-investigation.md  2026-01-06-blockers-resolved-go-for-phase-0.md  2026-01-06-claude-cli-phase1-complete.md  2026-01-06-claude-cli-phases1-3-complete.md  2026-01-06-dev-team-implementation.md  2026-01-06-karematch-bugfix-session.md  2026-01-06-knowledge-objects-integration-complete.md  2026-01-06-ko-auto-approval-implemented.md  2026-01-06-phase-0-week-1-days-1-4-complete.md  2026-01-06-phase-minus-1-calibration.md  2026-01-06-prs-merged.md  2026-01-06-qa-team-workflow-fix.md  2026-01-06-ralph-loop-integration-complete.md  (+31 more)
(+796 files in other folders)
