[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "Autonomous multi-agent system for governed code quality improvement"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
aibrain = "cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "ralph*", "governance*", "knowledge*", "orchestration*", "adapters*", "audit*", "cli*", "tasks*"]
exclude = ["tests*", "docs*", "sessions*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "vibe-kanban/",
    "apps/",
    "adapters/research/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "parallel_autonomous_loop"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.parallel_executor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.llm_interface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.cito"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.metrics"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.pm_agent"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.traceability"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.vibe_kanban_integration"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ralph.policy.mission_control"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ralph.guardrails.patterns"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
