[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "Autonomous multi-agent system for governed code quality improvement"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "click>=8.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.110.0",
    # MCP Integration (v6)
    "mcp>=1.0",
    # Vector-Enhanced Knowledge Objects (v6)
    "sentence-transformers>=2.2",
    "lancedb>=0.4",
    # Response Optimization (v6)
    "anthropic>=0.40",
    # Monitoring UI (Phase 1)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
aibrain = "cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "ralph*", "governance*", "knowledge*", "orchestration*", "adapters*", "audit*", "cli*", "tasks*", "mcp*", "optimization*"]
exclude = ["tests*", "docs*", "sessions*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "vibe-kanban/",
    "apps/",
    "adapters/research/",
    "mission-control/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "parallel_autonomous_loop"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.parallel_executor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.llm_interface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.cito"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.metrics"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.pm_agent"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.traceability"
ignore_errors = true

# Council Pattern modules (v7.0 MVP - type annotations to be added in future iteration)
[[tool.mypy.overrides]]
module = "orchestration.message_bus"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.debate_context"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.debate_manifest"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.vote_aggregator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.council_adr_generator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.create_adr_from_debate"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.council_orchestrator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.debate_agent"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.analyst.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.admin.adr_creator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.coordinator.vibe_kanban_integration"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ralph.policy.mission_control"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ralph.guardrails.patterns"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.task_analyzer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.parallel_controller"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.performance_tracker"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.queue_sync_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.cito_resolver"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.test_phase_c"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mission_control.tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.email.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.editorial.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.advisor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "adapters.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ralph.baseline"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.advisor_integration"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.reflection"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.iteration_loop"
ignore_errors = true

[[tool.mypy.overrides]]
module = "claude.sdk_adapter"
ignore_errors = true

[[tool.mypy.overrides]]
module = "governance.hooks.sdk_ralph_hook"
ignore_errors = true

[[tool.mypy.overrides]]
module = "governance.hooks.sdk_stop_hook"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.bugfix"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.codequality"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.featurebuilder"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.testwriter"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "optimization.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "governance.hooks.mcp_hook"
ignore_errors = true

[[tool.mypy.overrides]]
module = "knowledge.embeddings"
ignore_errors = true

[[tool.mypy.overrides]]
module = "knowledge.vector_store"
ignore_errors = true

[[tool.mypy.overrides]]
module = "knowledge.service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "governance.contract"
ignore_errors = true

[[tool.mypy.overrides]]
module = "claude.auth_config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.add_license_tabs"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
